Refactor: 장소 검색 쿼리에 주소 검색어 조건 추가 및 커서 기반 페이징 적용 (#177)